--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
         "symfony/string": "6.4.*",
         "symfony/translation": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
+        "symfony/ux-svelte": "^2.17",
         "symfony/ux-turbo": "^2.16",
+        "symfony/ux-twig-component": "^2.14",
         "symfony/validator": "6.4.*",
         "symfony/web-link": "6.4.*",
         "symfony/yaml": "6.4.*",
