--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,9 @@ security:
             form_login:
                 login_path: main
                 check_path: main
+                default_target_path: users
+            logout:
+                path: /logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
