--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=e39fe5204981bf194b25dd711c34ae1c
 ###< symfony/framework-bundle ###
 
@@ -24,7 +24,7 @@ APP_SECRET=e39fe5204981bf194b25dd711c34ae1c
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://justfitby_docs_ZWdvcg:Y0OqPA@Xlo(=@127.0.0.1:3306/justfitby_docs?serverVersion=8.0.36&charset=utf8mb4"
+DATABASE_URL="mysql://root:ewQwe1018127.0.0.1:3306/task3?serverVersion=8.0.36&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
